Add current user games endpoint
